Basic table layout with rows and headers

--- a/HTML-CSS/tables/blank-template.html
+++ b/HTML-CSS/tables/blank-template.html
@@ -8,7 +8,37 @@
   </head>
   <body>
     <h1>Table template</h1>
+	<table>
+		<tr>
+		<th>Director</th>
+		<th>Film 1</th>
+		<th>Film 2</th>
+		<th>Film 3</th>
+		</tr>
 
+		<tr>
+		<th>Francis Ford Coppola</th>
+		<td>The Godfather Part I</td>
+		<td>The Godfather Part II</td>
+		<td>The Godfather Part III</td>
+		</tr>
+
+		<tr>
+		<th>Martin Scorcese</th>
+		<td>Goodfellas</td>
+		<td>Casino</td>
+		<td>The Wolf of Wall Street</td>
+		</tr>
+
+		<tr>
+		<th>Quentin Tarentino</th>
+		<td>Kill Bill</td>
+		<td>Pulp Fiction</td>
+		<td>Inglourious Basterds</td>
+		</tr>
+
+
+	</table>
 
   </body>
 </html>
