First successful test of colspan

--- a/HTML-CSS/tables/blank-template.html
+++ b/HTML-CSS/tables/blank-template.html
@@ -36,7 +36,10 @@
 		<td>Pulp Fiction</td>
 		<td>Inglourious Basterds</td>
 		</tr>
-
+	
+		<tr>
+		<td colspan="4"><strong>Modern Directors<strong></td>
+		</tr>
 
 	</table>
 
