--- a/HTML-CSS/tables/blank-template.html
+++ b/HTML-CSS/tables/blank-template.html
@@ -40,7 +40,10 @@
 		<tr>
 		<td colspan="4"><strong>Modern Directors<strong></td>
 		</tr>
-
+		<tr>
+		<th rowspan="2">Denis Villeneuve</th>
+		<td>Enemy</td>
+		<td colspan="2">Arrival</td>
 	</table>
 
   </body>
