--- a/HTML-CSS/tables/blank-template.html
+++ b/HTML-CSS/tables/blank-template.html
@@ -9,6 +9,13 @@
   <body>
     <h1>Table template</h1>
 	<table>
+	  <caption>Some of the Greatest Directors</caption>
+	   <colgroup>
+	    <col/>
+	    <col class="column-background" />
+	    <col class="column-fixed-width" />
+	    <col class="column-background" />
+	  </colgroup>
 		<tr>
 		<th>Director</th>
 		<th>Film 1</th>
